--- a/BE/settings.json
+++ b/BE/settings.json
@@ -51,42 +51,11 @@
         "common_logic": null
     },
     "logics": {
-        "85a9506c-620c-4eb8-b9e2-1dc6fbbdf02a": {
-            "order": 1,
-            "name": "자사 - 중독, 저주, 마비 종합 공격",
-            "created_at": "2024-12-01T20:20:37.139725",
-            "updated_at": "2024-12-06T17:21:24.684864",
-            "trigger_key": {
-                "display_text": "",
-                "key_code": "숫자패드 *",
-                "modifiers": 0,
-                "scan_code": 55,
-                "virtual_key": 106
-            },
-            "repeat_count": 1,
-            "is_nested": false,
-            "items": [
-                {
-                    "order": 1,
-                    "type": "logic",
-                    "display_text": "보호 무장 힘",
-                    "logic_id": "b8796333-e8d6-4ae2-9fec-801a713517d8",
-                    "logic_name": "보호 무장 힘",
-                    "repeat_count": 1
-                },
-                {
-                    "type": "delay",
-                    "display_text": "지연시간 : 0.01초",
-                    "duration": 0.01,
-                    "order": 2
-                }
-            ]
-        },
         "0dfa1418-cab1-4439-ae8a-b0c971471c99": {
-            "order": 2,
-            "name": "체력 회복 - 7회",
+            "order": 1,
+            "name": "체력 회복 - 8회",
             "created_at": "2024-11-26T06:51:44.957381",
-            "updated_at": "2024-12-07T07:39:07.841224",
+            "updated_at": "2024-12-07T09:49:26.349578",
             "trigger_key": {
                 "display_text": "",
                 "key_code": "숫자패드 /",
@@ -94,7 +63,7 @@
                 "scan_code": 53,
                 "virtual_key": 111
             },
-            "repeat_count": 7,
+            "repeat_count": 8,
             "is_nested": false,
             "items": [
                 {
@@ -160,10 +129,10 @@
             ]
         },
         "ed0d7b48-c7ac-4397-8ce5-360143efa401": {
-            "order": 3,
+            "order": 2,
             "name": "체력 회복 - 1회",
             "created_at": "2024-11-26T06:51:44.957381",
-            "updated_at": "2024-12-06T17:21:24.684864",
+            "updated_at": "2024-12-07T15:14:05.627314",
             "trigger_key": {
                 "display_text": "",
                 "key_code": "키 코드 192",
@@ -237,10 +206,10 @@
             ]
         },
         "b8796333-e8d6-4ae2-9fec-801a713517d8": {
-            "order": 4,
+            "order": 3,
             "name": "보호 무장 힘",
             "created_at": "2024-11-26T10:58:29.227835",
-            "updated_at": "2024-12-07T06:11:20.920928",
+            "updated_at": "2024-12-07T09:49:15.075304",
             "trigger_key": {
                 "display_text": "",
                 "key_code": "숫자패드 .",
@@ -554,10 +523,10 @@
             ]
         },
         "9ed591e4-b227-448b-9d0f-b90c76d1f662": {
-            "order": 5,
+            "order": 4,
             "name": "모두 줍기",
             "created_at": "2024-11-26T10:58:29.227835",
-            "updated_at": "2024-12-06T17:21:24.684864",
+            "updated_at": "2024-12-07T09:49:15.075304",
             "trigger_key": {
                 "display_text": "",
                 "key_code": "키 코드 190",
@@ -611,10 +580,10 @@
             ]
         },
         "e058193f-99b3-434c-be33-bb6222114c09": {
-            "order": 6,
+            "order": 5,
             "name": "공력증강 - 1회",
             "created_at": "2024-11-26T10:58:29.227835",
-            "updated_at": "2024-12-07T06:11:32.628704",
+            "updated_at": "2024-12-07T09:49:15.075304",
             "trigger_key": {
                 "display_text": "",
                 "key_code": "숫자패드 6",
@@ -654,9 +623,9 @@
                 {
                     "order": 4,
                     "type": "logic",
-                    "display_text": "체력 회복 - 7회",
+                    "display_text": "체력 회복 - 8회",
                     "logic_id": "0dfa1418-cab1-4439-ae8a-b0c971471c99",
-                    "logic_name": "체력 회복 - 7회",
+                    "logic_name": "체력 회복 - 8회",
                     "repeat_count": 1
                 },
                 {
@@ -682,10 +651,10 @@
             ]
         },
         "ba00b4b7-4268-4138-a424-d1e9353d7743": {
-            "order": 7,
+            "order": 6,
             "name": "공력증강 - 5회",
             "created_at": "2024-11-30T16:57:51.034740",
-            "updated_at": "2024-12-06T17:21:24.684864",
+            "updated_at": "2024-12-07T09:49:15.075304",
             "trigger_key": {
                 "display_text": "",
                 "key_code": "",
@@ -719,9 +688,9 @@
                 {
                     "order": 3,
                     "type": "logic",
-                    "display_text": "체력 회복 - 7회",
+                    "display_text": "체력 회복 - 8회",
                     "logic_id": "0dfa1418-cab1-4439-ae8a-b0c971471c99",
-                    "logic_name": "체력 회복 - 7회",
+                    "logic_name": "체력 회복 - 8회",
                     "repeat_count": 1
                 },
                 {
@@ -741,10 +710,10 @@
             ]
         },
         "9614e85c-3ceb-423b-97ea-e17bfc0101fc": {
-            "order": 8,
+            "order": 7,
             "name": "동동주 마시기 - 1회",
             "created_at": "2024-11-30T07:08:49.271692",
-            "updated_at": "2024-12-06T17:29:50.709534",
+            "updated_at": "2024-12-07T09:49:15.075304",
             "trigger_key": {
                 "display_text": "",
                 "key_code": "",
@@ -842,10 +811,10 @@
             ]
         },
         "e28a6797-8256-46cd-94f4-6edce9c3e596": {
-            "order": 9,
+            "order": 8,
             "name": "공력증강 - 무한반복",
             "created_at": "2024-12-04T09:13:04.478232",
-            "updated_at": "2024-12-07T06:11:32.658718",
+            "updated_at": "2024-12-07T09:49:15.075304",
             "trigger_key": {
                 "display_text": "",
                 "key_code": "Delete",
@@ -953,10 +922,10 @@
             ]
         },
         "970a1723-88f9-4a50-8bb4-4f8c8f8199fe": {
-            "order": 10,
+            "order": 9,
             "name": "공격 - 첨, 체력회복 - 1회",
             "created_at": "2024-11-30T10:25:06.438732",
-            "updated_at": "2024-12-06T17:21:24.684864",
+            "updated_at": "2024-12-07T09:49:15.075304",
             "trigger_key": {
                 "display_text": "",
                 "key_code": "",
@@ -1004,10 +973,10 @@
             ]
         },
         "0f7febe4-03e2-4e00-bc00-4517a9a33556": {
-            "order": 11,
+            "order": 10,
             "name": "공격 - 첨 - 3회",
             "created_at": "2024-12-02T02:03:00.957188",
-            "updated_at": "2024-12-06T17:21:24.684864",
+            "updated_at": "2024-12-07T09:49:15.075304",
             "trigger_key": {
                 "display_text": "",
                 "key_code": "",
@@ -1047,10 +1016,10 @@
             ]
         },
         "791b01da-34eb-4faf-ac3a-239b37f5749a": {
-            "order": 12,
+            "order": 11,
             "name": "중독, 공격 - 8회",
             "created_at": "2024-12-01T02:24:21.834711",
-            "updated_at": "2024-12-06T17:21:24.684864",
+            "updated_at": "2024-12-07T09:49:15.075304",
             "trigger_key": {
                 "display_text": "",
                 "key_code": "숫자패드 3",
@@ -1194,10 +1163,10 @@
             ]
         },
         "14cf8676-e086-4795-828b-14c479c98fe7": {
-            "order": 13,
+            "order": 12,
             "name": "중독, 공격 - 3회",
             "created_at": "2024-12-04T16:20:45.467082",
-            "updated_at": "2024-12-06T17:21:24.684864",
+            "updated_at": "2024-12-07T15:14:05.620810",
             "trigger_key": {
                 "display_text": "",
                 "key_code": "",
@@ -1341,10 +1310,10 @@
             ]
         },
         "03037b0b-f0ce-4b19-aca7-fbf24d2d3ec2": {
-            "order": 14,
+            "order": 13,
             "name": "중독, 공격 - 1회",
             "created_at": "2024-12-04T16:20:46.533992",
-            "updated_at": "2024-12-07T06:11:32.643006",
+            "updated_at": "2024-12-07T14:59:18.039477",
             "trigger_key": {
                 "display_text": "",
                 "key_code": "",
@@ -1488,10 +1457,10 @@
             ]
         },
         "5e7f8b90-c0e2-4583-83c8-492013f0ac52": {
-            "order": 15,
+            "order": 14,
             "name": "중독, 첨 - 1회",
             "created_at": "2024-12-01T21:23:19.617646",
-            "updated_at": "2024-12-07T06:11:32.636494",
+            "updated_at": "2024-12-07T09:49:15.075304",
             "trigger_key": {
                 "display_text": "",
                 "key_code": "",
@@ -1581,10 +1550,10 @@
             ]
         },
         "ff47c224-b8e1-4a88-bf03-20850f87e232": {
-            "order": 16,
+            "order": 15,
             "name": "중독만 - 55회 - 우컨트롤",
             "created_at": "2024-11-30T14:19:30.464189",
-            "updated_at": "2024-12-06T17:21:24.684864",
+            "updated_at": "2024-12-07T09:49:15.075304",
             "trigger_key": {
                 "display_text": "",
                 "key_code": "키 코드 25",
@@ -1676,10 +1645,10 @@
             ]
         },
         "69b74254-4313-4546-94c9-313b21ce6e3d": {
-            "order": 17,
+            "order": 16,
             "name": "중독만 - 90회 - 하이픈",
             "created_at": "2024-12-04T00:08:13.574278",
-            "updated_at": "2024-12-06T17:21:24.684864",
+            "updated_at": "2024-12-07T09:49:15.075304",
             "trigger_key": {
                 "display_text": "",
                 "key_code": "숫자패드 -",
@@ -1770,11 +1739,108 @@
                 }
             ]
         },
+        "85a9506c-620c-4eb8-b9e2-1dc6fbbdf02a": {
+            "order": 17,
+            "name": "중독, 마비 첨 사냥 - 무한반복",
+            "created_at": "2024-12-01T20:20:37.139725",
+            "updated_at": "2024-12-07T15:14:05.640338",
+            "trigger_key": {
+                "display_text": "",
+                "key_code": "숫자패드 *",
+                "modifiers": 0,
+                "scan_code": 55,
+                "virtual_key": 106
+            },
+            "repeat_count": 9999,
+            "is_nested": false,
+            "items": [
+                {
+                    "order": 1,
+                    "type": "logic",
+                    "display_text": "마비 상하좌우 - 2회",
+                    "logic_id": "27d1f013-d82b-42f2-87cd-785dad90b052",
+                    "logic_name": "마비 상하좌우 - 2회",
+                    "repeat_count": 1
+                },
+                {
+                    "order": 2,
+                    "type": "logic",
+                    "display_text": "중독, 공격 - 3회",
+                    "logic_id": "14cf8676-e086-4795-828b-14c479c98fe7",
+                    "logic_name": "중독, 공격 - 3회",
+                    "repeat_count": 1
+                },
+                {
+                    "order": 3,
+                    "display_text": "키 입력: 숫자패드 9 --- 누르기",
+                    "action": "누르기",
+                    "type": "key_input",
+                    "key_code": "숫자패드 9",
+                    "scan_code": 73,
+                    "virtual_key": 105,
+                    "modifiers": 0
+                },
+                {
+                    "order": 4,
+                    "display_text": "키 입력: 숫자패드 9 --- 떼기",
+                    "action": "떼기",
+                    "type": "key_input",
+                    "key_code": "숫자패드 9",
+                    "scan_code": 73,
+                    "virtual_key": 105,
+                    "modifiers": 0
+                },
+                {
+                    "order": 5,
+                    "type": "logic",
+                    "display_text": "체력 회복 - 1회",
+                    "logic_id": "ed0d7b48-c7ac-4397-8ce5-360143efa401",
+                    "logic_name": "체력 회복 - 1회",
+                    "repeat_count": 1
+                },
+                {
+                    "order": 6,
+                    "type": "logic",
+                    "display_text": "중독, 공격 - 3회",
+                    "logic_id": "14cf8676-e086-4795-828b-14c479c98fe7",
+                    "logic_name": "중독, 공격 - 3회",
+                    "repeat_count": 1
+                },
+                {
+                    "order": 7,
+                    "display_text": "키 입력: 숫자패드 9 --- 누르기",
+                    "action": "누르기",
+                    "type": "key_input",
+                    "key_code": "숫자패드 9",
+                    "scan_code": 73,
+                    "virtual_key": 105,
+                    "modifiers": 0
+                },
+                {
+                    "order": 8,
+                    "display_text": "키 입력: 숫자패드 9 --- 떼기",
+                    "action": "떼기",
+                    "type": "key_input",
+                    "key_code": "숫자패드 9",
+                    "scan_code": 73,
+                    "virtual_key": 105,
+                    "modifiers": 0
+                },
+                {
+                    "order": 9,
+                    "type": "logic",
+                    "display_text": "체력 회복 - 1회",
+                    "logic_id": "ed0d7b48-c7ac-4397-8ce5-360143efa401",
+                    "logic_name": "체력 회복 - 1회",
+                    "repeat_count": 1
+                }
+            ]
+        },
         "04ecde56-4e55-45be-8a9d-92e3464adc2e": {
             "order": 18,
             "name": "중독만 - 1회",
             "created_at": "2024-12-01T21:24:52.849277",
-            "updated_at": "2024-12-06T17:21:24.684864",
+            "updated_at": "2024-12-07T14:59:18.016795",
             "trigger_key": {
                 "display_text": "",
                 "key_code": "",
@@ -1869,7 +1935,7 @@
             "order": 19,
             "name": "절망만 - 20회",
             "created_at": "2024-12-01T02:22:23.843289",
-            "updated_at": "2024-12-06T17:21:24.684864",
+            "updated_at": "2024-12-07T09:49:15.075304",
             "trigger_key": {
                 "display_text": "",
                 "key_code": "숫자패드 0",
@@ -1964,7 +2030,7 @@
             "order": 20,
             "name": "저주만 - 20회",
             "created_at": "2024-11-30T16:06:26.318706",
-            "updated_at": "2024-12-06T17:21:24.684864",
+            "updated_at": "2024-12-07T09:49:15.075304",
             "trigger_key": {
                 "display_text": "",
                 "key_code": "숫자패드 4",
@@ -2059,16 +2125,16 @@
             "order": 21,
             "name": "마비만 - 20회",
             "created_at": "2024-11-30T14:35:32.801674",
-            "updated_at": "2024-12-07T07:44:57.040013",
+            "updated_at": "2024-12-07T09:49:15.075304",
             "trigger_key": {
                 "display_text": "",
-                "key_code": "",
+                "key_code": "숫자패드 5",
                 "modifiers": 0,
-                "scan_code": 0,
-                "virtual_key": 0
+                "scan_code": 76,
+                "virtual_key": 101
             },
             "repeat_count": 20,
-            "is_nested": true,
+            "is_nested": false,
             "items": [
                 {
                     "order": 1,
@@ -2150,44 +2216,11 @@
                 }
             ]
         },
-        "959cc48e-664d-41ed-932c-8e73c5efddc6": {
-            "order": 22,
-            "name": "마비 - 상하좌우 - 전체20회 - 1회",
-            "created_at": "2024-12-06T17:17:32.031972",
-            "updated_at": "2024-12-07T07:44:57.054098",
-            "trigger_key": {
-                "display_text": "",
-                "key_code": "숫자패드 5",
-                "modifiers": 0,
-                "scan_code": 76,
-                "virtual_key": 101
-            },
-            "repeat_count": 1,
-            "is_nested": false,
-            "items": [
-                {
-                    "order": 1,
-                    "type": "logic",
-                    "display_text": "마비 상하좌우 - 3회",
-                    "logic_id": "27d1f013-d82b-42f2-87cd-785dad90b052",
-                    "logic_name": "마비 상하좌우 - 3회",
-                    "repeat_count": 1
-                },
-                {
-                    "order": 2,
-                    "type": "logic",
-                    "display_text": "마비만 - 20회",
-                    "logic_id": "59070f24-4d2d-4c54-8100-f104e4645d06",
-                    "logic_name": "마비만 - 20회",
-                    "repeat_count": 1
-                }
-            ]
-        },
         "27d1f013-d82b-42f2-87cd-785dad90b052": {
-            "order": 23,
-            "name": "마비 상하좌우 - 3회",
+            "order": 22,
+            "name": "마비 상하좌우 - 2회",
             "created_at": "2024-12-06T16:29:20.641646",
-            "updated_at": "2024-12-07T07:44:57.033322",
+            "updated_at": "2024-12-07T15:18:40.194731",
             "trigger_key": {
                 "display_text": "",
                 "key_code": "오른쪽 쉬프트",
@@ -2195,7 +2228,7 @@
                 "scan_code": 54,
                 "virtual_key": 161
             },
-            "repeat_count": 3,
+            "repeat_count": 2,
             "is_nested": false,
             "items": [
                 {
@@ -2441,10 +2474,10 @@
             ]
         },
         "e1c7d791-2f2c-48ec-991f-be44ce9c29ab": {
-            "order": 24,
+            "order": 23,
             "name": "마비 - 홈 클릭",
             "created_at": "2024-12-07T06:09:55.766255",
-            "updated_at": "2024-12-07T07:35:12.550365",
+            "updated_at": "2024-12-07T15:18:40.179530",
             "trigger_key": {
                 "display_text": "",
                 "key_code": "",
