--- a/BE/settings.json
+++ b/BE/settings.json
@@ -4297,11 +4297,52 @@
                 }
             ]
         },
-        "null": {
+        "7f8b344c-1c82-42c9-bd8a-a155d024a5ec": {
             "order": 48,
             "name": "테스트",
             "created_at": "2024-12-11T15:33:14.356286",
-            "updated_at": "2024-12-11T15:33:14.356286",
+            "updated_at": "2024-12-11T15:45:07.800075",
+            "trigger_key": null,
+            "repeat_count": 1,
+            "is_nested": true,
+            "items": [
+                {
+                    "order": 1,
+                    "display_text": "키 입력: 엔터 --- 누르기",
+                    "action": "누르기",
+                    "type": "key_input",
+                    "key_code": "엔터",
+                    "scan_code": 28,
+                    "virtual_key": 13,
+                    "modifiers": 0
+                },
+                {
+                    "order": 2,
+                    "display_text": "키 입력: 엔터 --- 떼기",
+                    "action": "떼기",
+                    "type": "key_input",
+                    "key_code": "엔터",
+                    "scan_code": 28,
+                    "virtual_key": 13,
+                    "modifiers": 0
+                },
+                {
+                    "order": 2,
+                    "display_text": "키 입력: 엔터 --- 떼기",
+                    "action": "떼기",
+                    "type": "key_input",
+                    "key_code": "엔터",
+                    "scan_code": 28,
+                    "virtual_key": 13,
+                    "modifiers": 0
+                }
+            ]
+        },
+        "ae5c06de-9e2d-43da-b4f4-151c0300572b": {
+            "order": 49,
+            "name": "ㅇㅇㅇ",
+            "created_at": "2024-12-11T15:45:39.171246",
+            "updated_at": "2024-12-11T15:45:39.171246",
             "trigger_key": null,
             "repeat_count": 1,
             "is_nested": true,
